# OpenCV-Library-by-wmx

./: CMakeLists.txt  README.md  v.cpp
photo/: CMakeLists.txt  opcv.cpp  opcv.h
